<resources>
    <!-- General Application Information -->
    <string name="app_name">webSearcher</string>

    <!-- URL Related Messages -->
    <string name="hint_enter_url">Enter URL</string>
    <string name="toast_enter_url">Please enter a URL</string>

    <!-- BottomSheet and Dialog Titles -->
    <string name="add_link">Add Link</string>
    <string name="dialog_add_title">Add Link</string>
    <string name="dialog_add_button">Add</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="add_link_content_desc">Add new link</string>

    <!-- Reading Time Format -->
    <string name="reading_time_format">%1$d min</string>

    <!-- Error Messages -->
    <string name="toast_error">Error: %1$s</string>

    <!-- Placeholders -->
    <string name="placeholder_reading_time">5 min</string>
    <string name="placeholder_title">This long article title can span multiple lines</string>

    <string name="toast_article_saved">Article Saved!</string>

    <!-- Diğer string kaynakları -->
    <string name="filter_all">All</string>
    <string name="filter_unread">Unread</string>
    <string name="filter_read">Read</string>

    <string name="empty_text">No Data</string>

    <string name="toast_marked_read">Read</string>
    <string name="toast_deleted">Deleted</string>
    <string name="toast_enter_email_password">Please Enter All Fields</string>
    <string name="toast_login_success">Login Successful</string>

    <string name="toast_coming_soon">Error</string>

    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <string name="profile_pic">Profile pic</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="read_check_desc">Read</string>

    <string name="logout">Logout</string>
    <string name="login">Log In</string>

    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="re_password">Enter Password Again</string>
    <string name="signin">Sign in</string>

    <string name="example_name">Name Surname</string>
    <string name="example_mail">muhammet@example.com</string>

    <string name="theme">Theme</string>
    <string name="language">Language</string>

    <string name="error_user_data">Error loading user data: </string>
    <string name="error_article_data">Error loading articles: </string>

    <string name="error_passwords_not_match">Passwords don\'t match </string>
    <string name="toast_register_success">Register Successful!</string>
    <string name="database_error">Cannot add user to database</string>

    <string name="error_email_not_found">Error: Email not found</string>
    <string name="invalid_email_format">Invalid email format</string>
</resources>
