<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingVertical="8dp"
    android:paddingHorizontal="16dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <!-- Site Icon -->
    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/add_link_content_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@drawable/placeholder_image"/>

    <!-- Article Title -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toEndOf="@id/imageViewIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/placeholder_title"/>

    <!-- Reading Time -->
    <TextView
        android:id="@+id/textViewReadingTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textColor="@color/colorTextSecondary"
        app:layout_constraintStart_toEndOf="@id/imageViewIcon"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        android:text="@string/placeholder_reading_time"/>

    <!-- Tick Icon -->
    <ImageView
        android:id="@+id/imageViewTick"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/read_check_desc"
        android:src="@drawable/ic_check"
        android:visibility="gone"
        app:tint="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <!-- başta gizli -->

    <!-- Alt Çizgi -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
